# big-data-big-trouble

./: README.md  pyproject.toml
big_data_big_trouble.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
modules/ensemble/: __init__.py  vote.py
modules/models/: __init__.py  factory.py
modules/training/: __init__.py  evaluate.py  train.py
modules/utils/: __init__.py  config.py  load_data.py  seed.py
notebooks/: eda.ipynb
notebooks/experiments/: satria.ipynb  trisha.ipynb  yuda.ipynb
