[project]
name = "big-data-big-trouble"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "timm>=0.9",
    "torch>=2.0",
    "torchvision>=0.15",
    "tqdm>=4.0",
]

[tool.setuptools.packages.find]
include = ["modules*"]
